# olnedslashssc2ce-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: python-publish.yml
python-bindings/: CMakeLists.txt  py_book.hpp  py_parser.hpp  ssc2ce_cpp.cpp
src/: CMakeLists.txt
src/cex/: book_l2.hpp  parser.cpp  parser.hpp
src/coinbase_pro/: book_l2.hpp  parser.cpp  parser.hpp
src/common/: book_l2.hpp  book_l2_map.hpp  parser.hpp
src/deribit/: parser.cpp  parser.hpp
tests/: CMakeLists.txt  __init__.py  cex_parser_test.cpp  cex_test.py  coinbase_parser_test.cpp  coinbase_pro_test.py  deribit_parser_test.cpp  deribit_parser_test.py  test.py
